# libcasm-ir

./: .cirrus.yml  .clang-format  .config.mk  .gitattributes  .gitignore  .gitmodules  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  COPYRIGHT.txt  Cargo.toml  LICENSE.txt  Makefile  README.md  README.org  libcasm-ir.all.h  libcasm-ir.h
.ci/: build.yml  pipeline.yml  test.yml
.ci/task/: build.yml  test.yml
.cmake/: Findlibcasm-ir.cmake  LibPackage.cmake  config.mk
.github/workflows/: build.yml  nightly.yml
etc/: CMakeLists.txt
etc/benchmark/: CMakeLists.txt  main.cpp
etc/test/: CMakeLists.txt  agent.cpp  annotation.cpp  constant.cpp  enumeration.cpp  isa.cpp  main.cpp  main.h  property.cpp  type.cpp  value.cpp
etc/test/constant/: binary.cpp  bit.cpp  integer.cpp  list.cpp  range.cpp  rational.cpp  string.cpp  undef.cpp
etc/test/instruction/: add.cpp  imp.cpp  inv.cpp  pow.cpp
etc/test/operation/: abort.cpp  and.cpp  assert.cpp  equ.cpp  imp.cpp  not.cpp  or.cpp  print.cpp  println.cpp  xor.cpp
etc/test/operation/add/: integer.cpp  string.cpp
etc/test/operation/as/boolean/: binary.cpp  boolean.cpp  integer.cpp
etc/test/operation/as/integer/: binary.cpp  boolean.cpp  integer.cpp
etc/test/operation/as/string/: binary.cpp  boolean.cpp  decimal.cpp  enumeration.cpp  integer.cpp  rational.cpp  string.cpp
etc/test/operation/at/: list.cpp  tuple.cpp
etc/test/operation/geq/: integer.cpp
etc/test/operation/gth/: integer.cpp
etc/test/operation/inv/: integer.cpp
etc/test/operation/leq/: integer.cpp
etc/test/operation/lth/: integer.cpp
etc/test/operation/size/: enumeration.cpp  list.cpp  range.cpp
etc/test/transform/: BranchEliminationPass.cpp
etc/test/type/: binary.cpp  bit.cpp  boolean.cpp  decimal.cpp  enum.cpp  feature.cpp  file.cpp  id.cpp  integer.cpp  list.cpp  object.cpp  port.cpp  range.cpp  ranged_integer.cpp  rational.cpp  record.cpp  relation.cpp  structure.cpp  tuple.cpp  void.cpp
src/: Agent.cpp  Agent.h  Annotation.cpp  Annotation.h  AstInterface.h  Block.cpp  Block.h  Builtin.cpp  Builtin.h  CMakeLists.txt  CasmIR.h  Constant.cpp  Constant.h  Derived.cpp  Derived.h  Enumeration.cpp  Enumeration.h  Exception.cpp  Exception.h  Feature.cpp  Feature.h  Function.cpp  Function.h  Instruction.cpp  Instruction.h  List.cpp  List.h  Operation.cpp  Operation.h  Property.cpp  Property.h  Range.cpp  Range.h  Rule.cpp  Rule.h  Specification.cpp  Specification.h  Statement.cpp  Statement.h  Structure.cpp  (+19 more)
src/analyze/: AstDumpPass.cpp  AstDumpPass.h  CasmIRDumpPass.cpp  CasmIRDumpPass.h  ConsistencyCheckPass.cpp  ConsistencyCheckPass.h  IRDumpDebugPass.cpp  IRDumpDebugPass.h  TypeCheckPass.cpp  TypeCheckPass.h
src/execute/: NumericExecutionPass.cpp  NumericExecutionPass.h
src/transform/: AstToCasmIRPass.cpp  AstToCasmIRPass.h  BranchEliminationPass.cpp  BranchEliminationPass.h  CasmIRToSourcePass.cpp  CasmIRToSourcePass.h  ConstantFoldingPass.cpp  ConstantFoldingPass.h  IRDumpDebugPass.cpp  IRDumpDebugPass.h  IRDumpDotPass.cpp  IRDumpDotPass.h  IRDumpSourcePass.cpp  IRDumpSourcePass.h  SourceToAstPass.cpp  SourceToAstPass.h
uts/: Annotation.cpp  Type.cpp  Value.cpp  agent.cpp  annotation.cpp  constant.cpp  enumeration.cpp  example.cpp  isa.cpp  main.cpp  main.h  type.cpp  type_annotation.cpp  value.cpp
uts/Constant/: Bit.cpp  Integer.cpp  Rational.cpp
uts/Instruction/: add.cpp
uts/Type/: Bit.cpp  Integer.cpp
uts/constant/: Range.cpp  String.cpp  bit.cpp  integer.cpp  string.cpp  undef.cpp
uts/instruction/: add.cpp  imp.cpp  inv.cpp  pow.cpp
uts/subject/: example.cpp
uts/transform/: BranchEliminationPass.cpp
uts/type/: Bit.cpp  bit.cpp  boolean.cpp  enum.cpp  file.cpp  integer.cpp  list.cpp  port.cpp  range.cpp  ranged_integer.cpp  rational.cpp  relation.cpp  tuple.cpp  void.cpp
